--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "gulp": "^3.9.1",
